--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">GoodsMent</string>
 
     //Headings
     <string name="heading_0ne">Choose your Destination</string>
