--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,29 @@
     <string name="desc_two">njdbchdbchbchdbhbvcjbvjdbvjdb</string>
     <string name="desc_three">Grow your Business by Accepting card payments with The New Card Reader</string>
 
+
+    <string name="login_to_your_account">Login to your Account</string>
+    <string name="goodsment">GoodsMent</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">signin</string>
+    <string name="skip">Skip</string>
+    <string name="back">Back</string>
+    <string name="next">Next</string>
+    <string name="todo">TODO</string>
+    <string name="please_enter_your_e_mail_address_to_recieve_a_verification_code">Please Enter Your E-Mail Address To Recieve a Verification Code.</string>
+    <string name="e_mail">E-Mail</string>
+    <string name="send">Send</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="or_sign_in_with">- Or sign in with -</string>
+    <string name="sign_up">Sign up</string>
+    <string name="create_your_account">Create your Account</string>
+    <string name="name">Name</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="city">City</string>
+    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
+    <string name="signup">Signup</string>
+    <string name="signin">Sign in</string>
+    <string name="already_have_an_account">Already have an Account?</string>
+
 </resources>
