--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,23 +14,16 @@
 
     <string name="login_to_your_account">Login to your Account</string>
     <string name="goodsment">GoodsMent</string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
     <string name="sign_in">signin</string>
     <string name="skip">Skip</string>
     <string name="back">Back</string>
     <string name="next">Next</string>
-    <string name="todo">TODO</string>
     <string name="please_enter_your_e_mail_address_to_recieve_a_verification_code">Please Enter Your E-Mail Address To Recieve a Verification Code on gmail.</string>
-    <string name="e_mail">E-Mail</string>
     <string name="send">Send</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="or_sign_in_with">- Or sign in with -</string>
     <string name="sign_up">Sign up</string>
     <string name="create_your_account">Create your Account</string>
-    <string name="name">Name</string>
-    <string name="contact_number">Contact Number</string>
-    <string name="city">City</string>
     <string name="don_t_have_an_account">Don\'t have an Account ?</string>
     <string name="signup">Signup</string>
     <string name="signin">Sign in</string>
@@ -48,6 +41,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="report">Report</string>
-    <string name="enter_email_address">Enter Email Address</string>
+    <string name="enter_email">Enter Email</string>
     <string name="enter_password">Enter Password</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_contact_number">Enter Contact Number</string>
+    <string name="enter_city">Enter City</string>
 </resources>
